# CrawlerOne

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
crawler/: config.py  fetcher.py  filters.py  main.py  storage.py
crawler/models/: entry.py
tests/: conftest.py  test_fetcher.py  test_filters.py  test_integration.py
tests/fixtures/: hackernews_empty_sample.html  hackernews_entries.json  hackernews_sample.html  sample_entries.json  sample_entries_filter_long_comments.json  sample_entries_filter_short_points.json
