[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = 3.11
strict = true
plugins = []

[tool.ruff]
target-version = "py311"
line-length = 88
lint.select = ["E", "F", "B", "UP", "I"]  # E=pycodestyle, F=pyflakes, B=bugbear, UP=pyupgrade, I=isort
lint.ignore = ["E501"]  # Ignore line length if black is used

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
